<resources>
    <string name="app_name" translatable="false">Cropifier</string>
    <string name="intro_lang_pref" translatable="false" >Select your Language Preference:</string>
    <string name="btn_get_started">GET STARTED</string>
    <string name="tagline">Interacting with crops through a new eye</string>
    <string name="open_camera" >Click on the camera button and identify field photo of crops </string>
    <string-array name="home_cardview">
        <item> Snap &amp; Identify at Once </item>
        <item> Explore on Map </item>

        <item> Real Time Crop Identification </item>
        <item> Multi-Lingual Support </item>
        <item> Suggestions using Weather Forecast </item>
        <item> Offline Access to Information </item>

    </string-array>
    <string name="loc_permission_line1">To continue, turn on device location, which uses Google\'s location service</string>
    <string name="loc_permission_line2">Your device will need to:</string>
    <string name="loc_permission_line3">Use wifi,cell-networks, and sensors</string>
    <string name="loc_permission_line4">Use Google\'s location service as a part of this service,Google may collect location data peroidically and use this data in an anoymonous way to improve location accuracy and location-based services.</string>
    <string name="loc_permission_line5">This may change the location mode you\'ve selected for your device. For details, go to location settings.</string>
    <string name="loc_permission_know_more">KNOW MORE</string>
    <string name="loc_permission_no_thanks">NO THANKS</string>
    <string name="loc_permission_ok">OK</string>
    <string name="your_loc"> Your Location Coordinates: </string>
    <string name="navbar_home"> Home </string>
    <string name="navbar_explore"> Explore </string>
    <string name="navbar_camera"> Camera </string>
    <string name="navbar_livefeed"> Livefeed </string>
    <string name="choose_lang"> Choose Language: </string>
    <string name="cropinfo"> Crop Info </string>
    <string name="dashboard"> Dashboard </string>
    <string-array name="roles">
        <item>Regional View</item>
        <item>Country View</item>
    </string-array>
    <string name="role"> Select Map View: </string>
    <string name="gps_permission"> Your GPS seems to be disabled, do you want to enable it? </string>
    <string name="snackbar"> Click the marker and its info snippet for more details </string>
    <string name="okay"> OKAY </string>
    <string name="own_loc"> You are here </string>
    <string name="bitter1"> Bilaspur,Chattisgarh </string>
    <string name="bitter2"> Nellore,Andhra Pradesh </string>
    <string name="bitter3"> Kolhapur,Maharashtra </string>
    <string name="bitter4"> Junagadh,Gujarat </string>
    <string name="bitter5"> Jaipur,Rajasthan </string>
    <string name="bitter6"> Jalandar,Punjab </string>
    <string name="bitter7"> Cuddalore,Tamil Nadu </string>
    <string name="bitter8"> Thiruvanthapuram,Kerala </string>
    <string name="bitter9"> Bagalkot,Karnataka </string>
    <string name="bitter10"> Paschim Medinipur,West Bengal </string>
    <string name="bitter11"> Nayagarh,Odisha </string>
    <string name="bitter12"> Darrang,Assam </string>
    <string name="bitter13"> Lucknow,Uttar Pradesh </string>
    <string name="bitter14"> Muzaffarpur,Bihar </string>
    <string name="chilli1"> Krishna,Andhra Pradesh </string>
    <string name="chilli2"> Solapur,Maharashtra </string>
    <string name="chilli3"> Bhavnagar,Gujarat </string>
    <string name="chilli4"> Nellore,Andhra Pradesh </string>
    <string name="chilli5"> Muzaffarpur,Bihar </string>
    <string name="chilli6"> Vaishali,Bihar </string>
    <string name="chilli8"> Patna,Bihar </string>
    <string name="chilli9"> Palamu,Jharkhand </string>
    <string name="chilli10"> Belgaum,Karnataka </string>
    <string name="chilli11"> Haveri,Karnataka </string>
    <string name="chilli12"> Chitradurga,Karnataka </string>
    <string name="chilli13"> Wayanad,Kerala </string>
    <string name="chilli14"> Ernakulam,Kerala </string>
    <string name="chilli15"> Palakkad,Kerala </string>
    <string name="chilli16"> Fatehgarh Sahib,Punjab </string>
    <string name="chilli17"> Patiala,Punjab </string>
    <string name="chilli18"> Nagaur,Rajasthan </string>
    <string name="chilli19"> Pali,Rajasthan </string>
    <string name="chilli20"> Tirunelveli,Tamil Nadu </string>
    <string name="chilli21"> Virudhunagar,Tamil Nadu </string>
    <string name="chilli22"> Nagapattinam,Tamil Nadu </string>
    <string name="chilli23"> Jalpaiguri,West Bengal </string>
    <string name="chilli24"> Siddhart nagar,Uttar Pradesh </string>
    <string name="chilli25"> Guna,Madhya Pradesh </string>
    <string name="coffee1"> Koppal,Karnataka </string>
    <string name="coffee2"> Pathanamthitta,Kerala </string>
    <string name="coffee3"> Visakhapatnam,Andhra Pradesh </string>
    <string name="coffee4"> Mysore,Karnataka </string>
    <string name="coffee5"> Kottayam,Kerala </string>
    <string name="coffee6"> Thiruvannamalai,Tamil Nadu </string>
    <string name="coffee7"> Medak,Telangana </string>
    <string name="coffee8"> Bargarh,Odisha </string>
    <string name="coffee9"> Kamrup,Assam </string>
    <string name="coffee10"> Dimapur,Nagaland </string>
    <string name="coffee11"> Imphal,Manipur </string>
    <string name="coffee12"> Lepa-Rada,Arunachal Pradesh </string>
    <string name="coffee13"> Serchhip,Mizoram </string>
    <string name="cotton1"> Ludhiana,Punjab </string>
    <string name="cotton2"> Bharuch,Gujarat </string>
    <string name="cotton3"> Amravati,Maharashtra </string>
    <string name="cotton4"> Washim,Maharashtra </string>
    <string name="cotton5"> Ahmedabad,Gujarat </string>
    <string name="cotton6"> Porbandar,Gujarat </string>
    <string name="cotton7"> Surendranagar,Gujarat </string>
    <string name="cotton8"> Amreli,Gujarat </string>
    <string name="cotton9"> Bhavnagar,Gujarat </string>
    <string name="cotton10"> Guntur,Andhra Pradesh </string>
    <string name="cotton11"> Anantapur,Andhra Pradesh </string>
    <string name="cotton12"> YSR Kadapa,Andhra Pradesh </string>
    <string name="cotton13"> Purnia,Bihar </string>
    <string name="cotton14"> Gadag,Karnataka </string>
    <string name="cotton15"> Raichur,Karnataka </string>
    <string name="cotton16"> Gulbarga,Karnataka </string>
    <string name="cotton17"> Sri Muktsar Sahib,Punjab </string>
    <string name="cotton18"> Firozpur,Punjab </string>
    <string name="cotton19"> Jaipur,Rajasthan </string>
    <string name="cotton20"> Banswara,Rajasthan </string>
    <string name="cotton21"> Chittorgarh,Rajasthan </string>
    <string name="cotton22"> Tiruppur,Tamil Nadu </string>
    <string name="cotton23"> Dindigul,Tamil Nadu </string>
    <string name="cotton24"> Kanyakumari,Tamil Nadu </string>
    <string name="cotton25"> Khowai,Tripura </string>
    <string name="cotton26"> Meerut,Uttar Pradesh </string>
    <string name="cotton27"> Aligarh,Uttar Pradesh </string>
    <string name="cotton28"> Ujjain,Madhya Pradesh </string>
    <string name="cotton29"> Harda,Madhya Pradesh </string>
    <string name="cotton30"> Sheopur,Madhya Pradesh </string>
    <string name="methi1"> Rajsamand,Rajasthan </string>
    <string name="methi2"> Cuddalore,Tamil Nadu </string>
    <string name="methi3"> Dehradun,Uttrakhand </string>
    <string name="methi4"> Bulandshahr,Uttar Pradesh </string>
    <string name="methi5"> Jaipur,Rajasthan </string>
    <string name="methi6"> Murshidabad,West Bengal </string>
    <string name="methi7"> Bharuch,Gujarat </string>
    <string name="methi8"> Katni,Madhya Pradesh </string>
    <string name="methi9"> Bastar,Chattisgarh </string>
    <string name="mustard1"> Kota,Rajasthan </string>
    <string name="mustard2"> Hisar,Haryana </string>
    <string name="mustard3"> Sibsagar,Assam </string>
    <string name="mustard4"> Dhemaji,Assam </string>
    <string name="mustard5"> East Champaran,Bihar </string>
    <string name="mustard6"> Poonch,Jammu Kashmir </string>
    <string name="mustard7"> AnantNag,Jammu Kashmir </string>
    <string name="mustard8"> West Garo Hills,Meghalaya </string>
    <string name="mustard9"> Dharampuri,Tamil Nadu </string>
    <string name="mustard10"> Jhansi,Uttar Pradesh </string>
    <string name="mustard11"> Betwar,Uttar Pradesh </string>
    <string name="mustard12"> Sitapur,Uttar Pradesh </string>
    <string name="mustard13"> Bhind,Madhya Pradesh </string>
    <string name="lentil1"> Bokaro,Jharkhand </string>
    <string name="lentil2"> Sidhi,Madhya Pradesh </string>
    <string name="lentil3"> East Godavari,Andhra Pradesh </string>
    <string name="lentil4"> West Godavari,Andhra Pradesh </string>
    <string name="lentil5"> Prakasam,Andhra Pradesh </string>
    <string name="lentil6"> Kaimur,Bihar </string>
    <string name="lentil7"> Fazilka,Punjab </string>
    <string name="lentil8"> Bathinda,Punjab </string>
    <string name="lentil9"> Sangrur,Punjab </string>
    <string name="lentil10"> Churu,Rajasthan </string>
    <string name="lentil11"> Bikaner,Rajasthan </string>
    <string name="lentil12"> Jhunjhunun,Rajasthan </string>
    <string name="lentil13"> Ajmer,Rajasthan </string>
    <string name="lentil14"> Thoothukudi,Tamil Nadu </string>
    <string name="lentil15"> Ramanathapuram,Tamil Nadu </string>
    <string name="lentil16"> Sivagangai,Tamil Nadu </string>
    <string name="lentil17"> Malda,West Bengal </string>
    <string name="maize1"> Bhilwara,Rajasthan </string>
    <string name="maize2"> Dakshina Kannada,Karnataka </string>
    <string name="maize3"> SabarKantha,Gujarat </string>
    <string name="maize4"> Udepur,Gujarat </string>
    <string name="maize5"> Banswara,Rajasthan </string>
    <string name="maize6"> East Godavari,Andhra Pradesh </string>
    <string name="maize7"> Golaghat,Assam </string>
    <string name="maize8"> Katihar,Bihar </string>
    <string name="maize9"> Samastipur,Bihar </string>
    <string name="maize10"> Muzaffarpur,Bihar </string>
    <string name="maize11"> Surajpur,Chattisgarh </string>
    <string name="maize12"> Bilaspur,Chattisgarh </string>
    <string name="maize13"> Bandipora,Jammu Kashmir </string>
    <string name="maize14"> Kathua,Jammu Kashmir </string>
    <string name="maize15"> Mysore,Karnataka </string>
    <string name="maize16"> East Garo Hills,Meghalaya </string>
    <string name="maize17"> Rayagada,Odisha </string>
    <string name="maize18"> Baudh,Odisha </string>
    <string name="maize19"> Tarn Taran,Punjab </string>
    <string name="maize20"> Sas Nagar,Punjab </string>
    <string name="maize21"> Baran,Rajasthan </string>
    <string name="maize22"> Dungarpur,Rajasthan </string>
    <string name="maize23"> Tiruchirappalli,Tamil Nadu </string>
    <string name="maize24"> Muzaffarnagar,Uttar Pradesh </string>
    <string name="maize25"> Neemuch,Madhya Pradesh </string>
    <string name="maize26"> Barwani,Madhya Pradesh </string>
    <string name="peas1"> Muzaffarnagar,Uttar Pradesh </string>
    <string name="peas2"> Gwalior,Madhya Pradesh </string>
    <string name="peas3"> Sirmaur,Himachal Pradesh </string>
    <string name="peas4"> Bhopal,Madhya Pradesh </string>
    <string name="peas5"> Dholpur,Rajasthan </string>
    <string name="peas6"> Jalgoan,Maharashtra </string>
    <string name="peas7"> Bhandara,Maharashtra </string>
    <string name="cropnametext"> Crop Name :</string>
    <string name="Ph"> Ph of soil :</string>
    <string name="sunlight"> Sunlight :</string>
    <string name="soiltype"> Type of soil :</string>
    <string name="cultitime"> Cultivation time:</string>
    <string name="climate"> Climate :</string>
    <string name="water"> Water :</string>
    <string name="culti"> Cultivated At :</string>
    <string name="description"> Description :</string>
    <string name="sciname"> Scientific Name :</string>
</resources>